k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - data-prototype.stg.anybill.de
      secretName: data-prototype-tls-secret-prod
  rules:
    - host: data-prototype.stg.anybill.de
      http:
        paths:
          - backend:
              service:
                name: analytics-dashboard
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-dashboard-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - data-prototype.stg.anybill.de
      secretName: data-prototype-tls-secret-prod
  rules:
    - host: data-prototype.stg.anybill.de
      http:
        paths:
          - backend:
              service:
                name: analytics-api
                port:
                  number: 80
            path: /api(/|$)(.*)
            pathType: ImplementationSpecific
